<resources>
    <string name="app_name">Vegetable Service Engine</string>
    <string name="api_url">https://eaa720374548.ngrok.io/Vegetable_Service_Engine_war_exploded/</string>

<!-- Definitions of the text views-->
    <string name="add_vegetable">Add Vegetable</string>
    <string name="edit_vegetable">Edit Vegetable</string>


<!--    Placeholder Definitions-->
    <string name="name_placeholder">Name</string>
    <string name="quantity_placeholder">Quantity</string>
    <string name="price_placeholder">Price</string>

<!--    Button Definition-->
    <string name="btn_submit">Submit</string>

<!--    Messages included in the app for errors-->
    <string name="error">Sorry!Finding trouble processing your request</string>
</resources>